--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,5 +19,4 @@ glam = "0.28.0"
 pollster = "0.3.0"
 log = "0.4.21"
 env_logger = "0.11.3"
-#winit = "0.30.1"cfg-if = "1.0.0"
-winit = { version = "0.29", features = ["android-native-activity"] }
+winit = "0.30.1"
