--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 # Python interpreter
+rustpython = "0.3.1"
 rustpython-vm = "0.3.1"
 
 # simplifies bit/byte-level operations
