--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "gam3du"
 version = "0.1.0"
 edition = "2021"
 description = "A game engine written for educational purposes. The main goals are learning/teaching software development, ease of use and having fun!"
+license = "MIT"
+license-file = "LICENSE-MIT"
 
 [dependencies]
 # Python interpreter
