--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,8 +27,12 @@ log = "0.4.21"
 env_logger = "0.11.3"
 winit = "0.30.1"
 
+serde = { version = "1.0.203", features = ["derive"] }
+json5 = { version = "0.4.1" }
+serde_json = "1.0.117"
+
 [lints.rust]
-# more lints can be found in [workspace.lints.clippy]
+# more lints can be found in [lints.clippy]
 
 ######################################################################################################################
 # Lints that are common to be globally overridden depending on the project's state or type
