--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ winit = "0.30.1"
 serde = { version = "1.0.203", features = ["derive"] }
 json5 = { version = "0.4.1" }
 serde_json = "1.0.117"
+tiny_http = "0.12.0"
 
 [lints.rust]
 # more lints can be found in [lints.clippy]
