--- a/Cargo.toml
+++ b/Cargo.toml
@@ -145,7 +145,7 @@ shadow_unrelated = "warn"
 
 absolute_paths = "warn"
 alloc_instead_of_core = "warn"
-allow_attributes = "warn"
+# allow_attributes = "warn"
 allow_attributes_without_reason = "warn"
 as_underscore = "warn"
 assertions_on_result_states = "warn"
