--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -7,4 +7,7 @@ license.workspace = true
 license-file.workspace = true
 
 [dependencies]
-serde.workspace = true
+serde = { workspace = true, features = ["derive"] }
+
+[lints]
+workspace = true
