--- a/libs/ecs/Cargo.toml
+++ b/libs/ecs/Cargo.toml
@@ -5,3 +5,9 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 license-file.workspace = true
+
+[dependencies]
+glam.workspace = true
+
+[lints]
+workspace = true
