start rewriting the robot engine

--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -8,6 +8,7 @@ license-file.workspace = true
 
 [dependencies]
 serde = { workspace = true, features = ["derive"] }
+winit.workspace = true
 
 [lints]
 workspace = true
