crash gracefuller on shutdown

--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 license-file.workspace = true
 
 [dependencies]
+log.workspace = true
 serde = { workspace = true, features = ["derive"] }
 winit.workspace = true
 
