--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gam3du"
+name = "gam3du-framework"
 version = "0.1.0"
 edition.workspace = true
 description = "A game engine written for educational purposes. The main goals are learning/teaching software development, ease of use and having fun!"
@@ -15,25 +15,25 @@ rustpython.workspace = true
 rustpython-vm.workspace = true
 
 # simplifies bit/byte-level operations
-bytemuck = { workspace = true, features = ["derive"] }
+# bytemuck = { workspace = true, features = ["derive"] }
 
 # Abstraction layer for the platform's graphics API
 wgpu.workspace = true
 
-# Basic vector and matrix types and operations thereon
-glam = { workspace = true, features = ["bytemuck"] }
+# # Basic vector and matrix types and operations thereon
+# glam = { workspace = true, features = ["bytemuck"] }
 
-rand.workspace = true
+# rand.workspace = true
 
-pollster.workspace = true
+# pollster.workspace = true
 log.workspace = true
 env_logger.workspace = true
 winit.workspace = true
 
-serde = { workspace = true, features = ["derive"] }
-json5 = { workspace = true }
-serde_json.workspace = true
-tiny_http.workspace = true
+# serde = { workspace = true, features = ["derive"] }
+# json5 = { workspace = true }
+# serde_json.workspace = true
+# tiny_http.workspace = true
 
 [lints]
 workspace = true
