--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "bindings/python/Cargo.toml",
         "engines/robot/Cargo.toml",
         "framework/Cargo.toml",
+        "launchers/robot/Cargo.toml",
         "libs/ecs/Cargo.toml",
         "libs/ecs-kawogi/Cargo.toml"
     ]
