move python runner into binding crate

--- a/bindings/python/Cargo.toml
+++ b/bindings/python/Cargo.toml
@@ -9,6 +9,9 @@ license-file.workspace = true
 [dependencies]
 bindings.workspace = true
 serde_json.workspace = true
+log.workspace = true
+rustpython-vm.workspace = true
+rustpython.workspace = true
 
 [lints]
 workspace = true
