--- a/launchers/robot/Cargo.toml
+++ b/launchers/robot/Cargo.toml
@@ -10,6 +10,7 @@ license-file.workspace = true
 gam3du-framework.workspace = true
 engine-robot.workspace = true
 bindings.workspace = true
+bind-python.workspace = true
 
 pollster.workspace = true
 log.workspace = true
