--- a/engines/robot/Cargo.toml
+++ b/engines/robot/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 license-file.workspace = true
 
 [dependencies]
+engines.workspace = true
 bytemuck = { workspace = true, features = ["derive"] }
 wgpu.workspace = true
 log.workspace = true
