--- a/runtimes/Cargo.toml
+++ b/runtimes/Cargo.toml
@@ -9,6 +9,7 @@ license-file.workspace = true
 [dependencies]
 serde = { workspace = true, features = ["derive"] }
 winit.workspace = true
+json.workspace = true
 
 [lints]
 workspace = true
