--- a/runtimes/Cargo.toml
+++ b/runtimes/Cargo.toml
@@ -3,13 +3,12 @@ name = "runtimes"
 description = "Common types, macros and helper functions for language runtimes"
 version.workspace = true
 edition.workspace = true
-license.workspace = true
 license-file.workspace = true
 
 [dependencies]
 serde = { workspace = true, features = ["derive"] }
 winit.workspace = true
-json.workspace = true
+serde_json.workspace = true
 
 [lints]
 workspace = true
