--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "gam3du-framework"
+description = "A game engine written for educational purposes. The main goals are learning/teaching software development, ease of use and having fun!"
 version = "0.1.0"
 edition.workspace = true
-description = "A game engine written for educational purposes. The main goals are learning/teaching software development, ease of use and having fun!"
+rust-version.workspace = true
 license-file.workspace = true
 
 [dependencies]
