--- a/launchers/robot/Cargo.toml
+++ b/launchers/robot/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "launcher-robot"
+description = "A simple robot moving across a 2D-plane."
 version = "0.1.0"
 edition.workspace = true
-description = "A simple robot moving across a 2D-plane."
+rust-version.workspace = true
 license-file.workspace = true
 
 [dependencies]
