--- a/runtimes/Cargo.toml
+++ b/runtimes/Cargo.toml
@@ -10,6 +10,7 @@ license-file.workspace = true
 serde = { workspace = true, features = ["derive"] }
 winit.workspace = true
 serde_json.workspace = true
+rand.workspace = true
 
 [lints]
 workspace = true
