--- a/engines/robot/Cargo.toml
+++ b/engines/robot/Cargo.toml
@@ -11,6 +11,7 @@ engines.workspace = true
 bytemuck = { workspace = true, features = ["derive"] }
 wgpu.workspace = true
 log.workspace = true
+serde_json.workspace = true
 runtimes.workspace = true
 glam = { workspace = true, features = ["bytemuck"] }
 
