--- a/engines/robot/Cargo.toml
+++ b/engines/robot/Cargo.toml
@@ -7,6 +7,7 @@ rust-version.workspace = true
 license-file.workspace = true
 
 [dependencies]
+gam3du-framework.workspace = true
 engines.workspace = true
 bytemuck = { workspace = true, features = ["derive"] }
 wgpu.workspace = true
