--- a/runtimes/python/Cargo.toml
+++ b/runtimes/python/Cargo.toml
@@ -7,6 +7,7 @@ rust-version.workspace = true
 license-file.workspace = true
 
 [dependencies]
+gam3du-framework.workspace = true
 runtimes.workspace = true
 serde_json.workspace = true
 log.workspace = true
