--- a/engines/robot/Cargo.toml
+++ b/engines/robot/Cargo.toml
@@ -16,6 +16,9 @@ log.workspace = true
 serde_json.workspace = true
 runtimes.workspace = true
 glam = { workspace = true, features = ["bytemuck"] }
+rustpython-vm.workspace = true
+rustpython.workspace = true
+
 
 [lints]
 workspace = true
