improve ergonomics of Python runtime builder

--- a/launchers/robot/Cargo.toml
+++ b/launchers/robot/Cargo.toml
@@ -21,5 +21,7 @@ winit.workspace = true
 serde_json.workspace = true
 tiny_http.workspace = true
 
+rustpython.workspace = true
+
 [lints]
 workspace = true
