--- a/runtimes/Cargo.toml
+++ b/runtimes/Cargo.toml
@@ -11,6 +11,7 @@ serde = { workspace = true, features = ["derive"] }
 winit.workspace = true
 serde_json.workspace = true
 rand.workspace = true
+indexmap.workspace = true
 
 [lints]
 workspace = true
