--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ engine-robot = { path = "engines/robot" }
 gam3du-framework = { path = "framework" }
 
 # Python interpreter
-rustpython-vm = { version = "0.4.0", default-features = false }
+rustpython-vm = { version = "0.4.0" }
 rustpython = { version = "0.4.0", default-features = false }
 
 # simplifies bit/byte-level operations
