--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -8,14 +8,17 @@ license-file.workspace = true
 
 [dependencies]
 engines.workspace = true
-runtimes.workspace = true
+serde = { workspace = true, features = ["derive"] }
+winit.workspace = true
+serde_json.workspace = true
+rand.workspace = true
+indexmap.workspace = true
 
 # Abstraction layer for the platform's graphics API
 wgpu.workspace = true
 
 log.workspace = true
 env_logger.workspace = true
-winit.workspace = true
 
 [lints]
 workspace = true
