--- a/engines/robot/Cargo.toml
+++ b/engines/robot/Cargo.toml
@@ -15,7 +15,7 @@ log.workspace = true
 serde_json.workspace = true
 glam = { workspace = true, features = ["bytemuck"] }
 rustpython-vm.workspace = true
-
+runtime-python.workspace = true
 
 [lints]
 workspace = true
