Implement PythonPlugin-runner

--- a/launchers/robot/Cargo.toml
+++ b/launchers/robot/Cargo.toml
@@ -20,5 +20,11 @@ winit.workspace = true
 serde_json.workspace = true
 tiny_http.workspace = true
 
+[build-dependencies]
+gam3du-framework.workspace = true
+runtime-python.workspace = true
+serde_json.workspace = true
+
+
 [lints]
 workspace = true
