--- a/launchers/robot/Cargo.toml
+++ b/launchers/robot/Cargo.toml
@@ -22,7 +22,7 @@ tiny_http.workspace = true
 
 [build-dependencies]
 gam3du-framework.workspace = true
-runtime-python.workspace = true
+runtime-python-bindgen.workspace = true
 serde_json.workspace = true
 
 
