--- a/launchers/robot/Cargo.toml
+++ b/launchers/robot/Cargo.toml
@@ -7,23 +7,22 @@ rust-version.workspace = true
 license-file.workspace = true
 
 [dependencies]
-ctrlc.workspace = true
-
-gam3du-framework.workspace = true
 engine-robot.workspace = true
+gam3du-framework-common.workspace = true
+gam3du-framework.workspace = true
 runtime-python.workspace = true
 
-pollster.workspace = true
+ctrlc.workspace = true
 log.workspace = true
+pollster.workspace = true
+serde_json.workspace = true
 winit.workspace = true
 
-serde_json.workspace = true
-
 [build-dependencies]
-gam3du-framework.workspace = true
+gam3du-framework-common.workspace = true
 runtime-python-bindgen.workspace = true
-serde_json.workspace = true
 
+serde_json.workspace = true
 
 [lints]
 workspace = true
