--- a/engines/robot/Cargo.toml
+++ b/engines/robot/Cargo.toml
@@ -7,14 +7,16 @@ rust-version.workspace = true
 license-file.workspace = true
 
 [dependencies]
-rand.workspace = true
+gam3du-framework-common.workspace = true
 gam3du-framework.workspace = true
-bytemuck = { workspace = true, features = ["derive"] }
-wgpu.workspace = true
-log.workspace = true
-glam = { workspace = true, features = ["bytemuck"] }
-rustpython-vm.workspace = true
 runtime-python.workspace = true
+
+bytemuck = { workspace = true, features = ["derive"] }
+glam = { workspace = true, features = ["bytemuck"] }
+log.workspace = true
+rand.workspace = true
+rustpython-vm.workspace = true
+wgpu.workspace = true
 
 [lints]
 workspace = true
