--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,11 +6,17 @@
         "consts",
         "fract",
         "gltf",
+        "mipmap",
         "multisample",
         "multisampled",
         "multiview",
+        "nanos",
+        "pyfunction",
+        "pymodule",
         "recv",
         "repr",
+        "rustpython",
+        "subsec",
         "subseconds",
         "texels",
         "Uninit",
