add normals and light to shader

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "recv",
         "repr",
         "rustpython",
+        "struct",
         "subsec",
         "subseconds",
         "texels",
