--- a/applications/robot/Cargo.toml
+++ b/applications/robot/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "launcher-robot"
+name = "application-robot"
 description = "A simple robot moving across a 2D-plane."
 version = "0.1.0"
 edition.workspace = true
