simplify wgpu setup; de-inline shader source

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,8 +13,10 @@
         "nanos",
         "pyfunction",
         "pymodule",
+        "recip",
         "recv",
         "repr",
+        "runtimes",
         "rustpython",
         "struct",
         "subsec",
