--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,9 @@ members = [
     "libraries/ecs-kawogi",
     "runtimes/python",
     "runtimes/python/bindgen",
+    "libraries/gltf-model",
+    "libraries/geometry",
+    "libraries/time",
 ]
 
 [workspace.package]
@@ -20,11 +23,14 @@ readme = "README.md"
 
 [workspace.dependencies]
 # workspace-internal crates
-runtime-python = { path = "runtimes/python" }
-runtime-python-bindgen = { path = "runtimes/python/bindgen" }
 engine-robot = { path = "engines/robot" }
 gam3du-framework = { path = "framework" }
 gam3du-framework-common = { path = "framework/common" }
+lib-geometry = { path = "libraries/geometry" }
+lib-gltf-model = { path = "libraries/gltf-model" }
+lib-time = { path = "libraries/time" }
+runtime-python = { path = "runtimes/python" }
+runtime-python-bindgen = { path = "runtimes/python/bindgen" }
 
 # from crates.io
 anyhow = "1.0.89"
