enable heights for tiles and improve lighting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "consts",
         "fract",
         "gltf",
+        "lerp",
         "mipmap",
         "multisample",
         "multisampled",
@@ -18,11 +19,14 @@
         "repr",
         "runtimes",
         "rustpython",
+        "srgb",
         "struct",
         "subsec",
         "subseconds",
         "texels",
         "Uninit",
+        "UVEC",
+        "webgl",
         "wgpu",
         "wgsl",
         "winit",
