enable python scripts to alter the tiles' height

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "rust-analyzer.check.command": "clippy",
     "cSpell.words": [
+        "bindgen",
         "bitor",
         "bytemuck",
         "consts",
