migrate to tokio and try to improve shutdown sequence

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,9 @@
         "subsec",
         "subseconds",
         "texels",
+        "tokio",
         "Uninit",
+        "unpark",
         "UVEC",
         "webgl",
         "wgpu",
