--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,18 +36,17 @@ runtime-python-bindgen = { path = "runtimes/python/bindgen" }
 anyhow = { version = "1.0.89", default-features = false }
 bytemuck = { version = "1.18.0", default-features = false }
 ctrlc = { version = "3.4.5", default-features = false }
-
+async-std = "1.13.0"
 # Generic helper type for iterators and formatting.
 # This is dependency is "free" because it is already in our dependency graph:
 # `either` is a dependency of `which` and `itertools` which are used by `rustpython-vm`.
-# TODO: Unused
 # either = "1.13.0"
-
+tokio = { version = "1.40.0", default-features = false }
+tokio-util = { version = "0.7.12", default-features = false }
 # Used to maintain the order of elements in JSON objects.
 # This makes the JSON deserialization of the `serde_json` crate deterministic
 # which is useful when generating code from the api.json file.
 indexmap = { version = "2.5.0", default-features = false, features = ["serde"] }
-
 env_logger = { version = "0.11.5", default-features = false, features = [
     "auto-color",
     "humantime",
@@ -55,7 +54,6 @@ env_logger = { version = "0.11.5", default-features = false, features = [
 glam = { version = "0.29.0", default-features = false, features = ["std"] }
 gltf = { version = "1.4.1", default-features = false, features = ["utils"] }
 log = { version = "0.4.22", default-features = false }
-pollster = { version = "0.3.0", default-features = false }
 rand = { version = "0.8.5", default-features = false }
 rustpython = { version = "0.4.0", default-features = false }
 rustpython-vm = { version = "0.4.0", default-features = false }
