--- a/winit/Cargo.toml
+++ b/winit/Cargo.toml
@@ -1,84 +1,35 @@
-[workspace]
-resolver = "2"
-members = [
-    "engines/robot",
-    "framework",
-    "framework/common",
-    "applications/robot",
-    # "libraries/ecs",
-    "libraries/ecs-kawogi",
-    "runtimes/python",
-    "runtimes/python/bindgen",
-    "libraries/gltf-model",
-    "libraries/geometry",
-    "libraries/time",
-]
-exclude = ["winit"]
-
-[workspace.package]
+[package]
+name = "winit"
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.81.0"
 license-file = "LICENSE-MIT"
 readme = "README.md"
 
-[workspace.dependencies]
-# workspace-internal crates
-engine-robot = { path = "engines/robot" }
-gam3du-framework = { path = "framework" }
-gam3du-framework-common = { path = "framework/common" }
-lib-geometry = { path = "libraries/geometry" }
-lib-gltf-model = { path = "libraries/gltf-model" }
-lib-time = { path = "libraries/time" }
-runtime-python = { path = "runtimes/python" }
-runtime-python-bindgen = { path = "runtimes/python/bindgen" }
+[dependencies]
+winit = { git = "https://github.com/rust-windowing/winit.git", rev = "3e9b80d47a9452b72e749a4890db23b92d65abc2", features = [
+    "default",
+] }
 
-# from crates.io
-anyhow = { version = "1.0.89", default-features = false }
-bytemuck = { version = "1.18.0", default-features = false }
-ctrlc = { version = "3.4.5", default-features = false }
-async-std = "1.13.0"
-# Generic helper type for iterators and formatting.
-# This is dependency is "free" because it is already in our dependency graph:
-# `either` is a dependency of `which` and `itertools` which are used by `rustpython-vm`.
-# either = "1.13.0"
-tokio = { version = "1.40.0", default-features = false }
-tokio-util = { version = "0.7.12", default-features = false }
-# Used to maintain the order of elements in JSON objects.
-# This makes the JSON deserialization of the `serde_json` crate deterministic
-# which is useful when generating code from the api.json file.
-indexmap = { version = "2.5.0", default-features = false, features = ["serde"] }
-env_logger = { version = "0.11.5", default-features = false, features = [
-    "auto-color",
-    "humantime",
-] }
-glam = { version = "0.29.0", default-features = false, features = ["std"] }
-gltf = { version = "1.4.1", default-features = false, features = ["utils"] }
-log = { version = "0.4.22", default-features = false }
-rand = { version = "0.8.5", default-features = false }
-rustpython = { version = "0.4.0", default-features = false }
-rustpython-vm = { version = "0.4.0", default-features = false }
-serde = { version = "1.0.210", default-features = false }
-serde_json = { version = "1.0.128", default-features = false, features = [
-    "std",
-] }
-tiny_http = { version = "0.12.0", default-features = false }
-wgpu = { version = "22.1.0", default-features = false, features = [
-    "wgsl",
-    "dx12",
-] }
-winit = { version = "0.30.5", default-features = false, features = [
-    "rwh_06",
+image = { version = "0.25.0", default-features = false, features = ["png"] }
+tracing = { version = "0.1.40", default-features = false, features = ["log"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+raw-window-handle = "0.6.2"
+
+[target.'cfg(not(target_os = "android"))'.dependencies]
+softbuffer = { version = "0.4.6", default-features = false, features = [
     "x11",
+    "x11-dlopen",
     "wayland",
+    "wayland-dlopen",
 ] }
 
-# Compile all (non-workspace) dependencies with optimizations.
-# https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
-[profile.dev.package."*"]
-opt-level = 1
+[target.'cfg(target_family = "wasm")'.dependencies]
+console_error_panic_hook = "0.1"
+tracing-web = "0.1"
+wasm-bindgen-test = "0.3"
 
-[workspace.lints.rust]
+[lints.rust]
 # more lints can be found in [lints.clippy]
 
 ######################################################################################################################
@@ -141,7 +92,7 @@ variant_size_differences = "warn"
 # non_exhaustive_omitted_patterns = "warn"
 # unnameable_types = "warn"
 
-[workspace.lints.clippy]
+[lints.clippy]
 # more lints can be found in [lints.rust]
 all = { level = "warn", priority = -1 }
 pedantic = { level = "warn", priority = -1 }
