make the winit example runnable in the browser

--- a/winit/.vscode/settings.json
+++ b/winit/.vscode/settings.json
@@ -18,5 +18,6 @@
         "winit",
         "Winit",
         "xffff"
-    ]
+    ],
+    //"rust-analyzer.cargo.target": "wasm32-unknown-unknown"
 }
