add wgpu support to winit demo code

--- a/winit/.vscode/settings.json
+++ b/winit/.vscode/settings.json
@@ -15,6 +15,7 @@
         "softbuffer",
         "Touchpad",
         "wayland",
+        "wgpu",
         "winit",
         "Winit",
         "xffff"
