--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -13,7 +13,7 @@ ctrlc.workspace = true
 env_logger.workspace = true
 log.workspace = true
 wgpu.workspace = true
-winit.workspace = true
+winit = { workspace = true, default-features = true }
 
 [lints]
 workspace = true
