--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,15 +63,33 @@ serde_json = { version = "1.0.132", default-features = false, features = [
     "std",
 ] }
 tiny_http = { version = "0.12.0", default-features = false }
-wgpu = { version = "23.0.0", default-features = false, features = [
-    "wgsl",
-    "dx12",
-] }
-winit = { version = "0.30.5", default-features = false, features = [
-    "rwh_06",
-    "x11",
-    "wayland",
-] }
+wgpu = { version = "23.0.0", default-features = false }
+winit = { git = "https://github.com/rust-windowing/winit.git", rev = "3e9b80d47a9452b72e749a4890db23b92d65abc2", default-features = false }
+
+# wgpu = { version = "23.0.0", default-features = false, features = [
+#     "wgsl",
+#     "dx12",
+# ] }
+# winit = { version = "0.30.5", default-features = false, features = [
+#     "rwh_06",
+#     "x11",
+#     "wayland",
+# ] }
+
+# winit = { git = "https://github.com/rust-windowing/winit.git", rev = "3e9b80d47a9452b72e749a4890db23b92d65abc2", features = [
+#     "default",
+# ] }
+# wgpu = { version = "23.0.0", features = ["webgl"] }
+image = { version = "0.25.0", default-features = false, features = ["png"] }
+tracing = { version = "0.1.40", default-features = false, features = ["log"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+wasm-bindgen = "*"
+web-sys = "*"
+pollster = "*"
+
+console_error_panic_hook = "0.1"
+tracing-web = "0.1"
+
 
 # Compile all (non-workspace) dependencies with optimizations.
 # https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
