--- a/libraries/gltf-model/Cargo.toml
+++ b/libraries/gltf-model/Cargo.toml
@@ -15,7 +15,7 @@ log.workspace = true
 bytemuck.workspace = true
 glam.workspace = true
 gltf.workspace = true
-wgpu.workspace = true
+wgpu = { workspace = true, features = ["wgsl"] }
 
 [lints]
 workspace = true
