re-write wgpu and renderer initialization in RenderSurface

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "bytemuck",
         "consts",
         "fract",
+        "gles",
         "gltf",
         "lerp",
         "mipmap",
@@ -18,17 +19,22 @@
         "recip",
         "recv",
         "repr",
+        "rpass",
         "runtimes",
         "rustpython",
         "srgb",
         "struct",
         "subsec",
         "subseconds",
+        "swapchain",
         "texels",
         "tokio",
+        "Touchpad",
         "Uninit",
         "unpark",
         "UVEC",
+        "Vsync",
+        "wayland",
         "webgl",
         "wgpu",
         "wgsl",
