--- a/framework/Cargo.toml
+++ b/framework/Cargo.toml
@@ -14,6 +14,7 @@ env_logger.workspace = true
 log.workspace = true
 wgpu.workspace = true
 winit = { workspace = true, default-features = true }
+pollster.workspace = true
 
 [lints]
 workspace = true
